# StreamlitInternalApp

./: .gitignore  Dockerfile  Makefile  README.md  dev.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: build.sh  run_formatters.sh  run_linters.sh  run_sample_app.sh  run_unit_tests.sh
streamlit_internal_app/: component.py  exceptions.py
tests/: conftest.py  test_app.py  test_component.py
tests/static/: example_app.py  incidents.csv
