[tool.poetry]
name = "streamlit_internal_app"
version = "0.2.0"
description = ""
authors = ["Kacper Wojtasinski <k0wojtasinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
commitizen = "^3.13.0"
black = "^23.12.0"
twine = "^4.0.2"
keyring = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ssv"
testpaths = [
    "tests",
]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
    "PT",  # flake8-pytest-style
    "PL",  # pylint
]
ignore = ["E501", "PLR0911", "PLR2004", "RUF001"]